# Jet-Binary-Classifier

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MLmodel/: train.py
ising_embed/: parameters.yaml
ising_embed/analysis/: cluster_heavyion_jets.cc  train_heavyion.py
ising_embed/src/: embed_fluctuations.py  freezeout_reader.py  ising_scaling.py  qcd_mapping.py
src/: generate_pythia_jets.cc
